[package]
name = "package-verifier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.9.0"
rand = "0.8.2"
actix-web = "3"
tokio = { version = "1", features = ["full"] }
csv = "1.1.6"
lazy_static = "1.4.0"
urlencoding = "2.1.0"
