[package]
name = "package-verifier"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.12.0"
rand = "0.8.5"
actix-web = "4.5.1"
tokio = { version = "1.38.0", features = ["full"] }
csv = "1.3.0"
lazy_static = "1.4.0"
urlencoding = "2.1.3"
